@@ -25,14 +25,14 @@ from stalker.models.entity import Entity
 
 from stalker.log import logging_level
 import logging
+
 logger = logging.getLogger(__name__)
 logger.setLevel(logging_level)
 
 
-
 class Link(Entity):
     """Holds data about external links.
-    
+
     Links are all about giving some external information to the current entity
     (external to the database, so it can be something on the
     :class:`~stalker.models.repository.Repository` or in the Web or anywhere
@@ -42,15 +42,15 @@ class Link(Entity):
     multiple :class:`~stalker.models.tag.Tag` instances to add more
     information, and to filter them back). Again it is defined by the needs of
     the studio.
-    
+
     For sequences of files the file name should be in "%h%p%t %R" format in
     `PySeq`_ formatting rules.
-    
-    :param path: The Path to the link, it can be a path to a folder or a file
-      in the file system, or a web page. For file sequences use "%h%p%t %R"
-      format, for more information see `PySeq Documentation`_. Setting the path
-      to None or an empty string is not accepted.
-    
+
+    :param full_path: The full path to the link, it can be a path to a folder
+      or a file in the file system, or a web page. For file sequences use
+      "%h%p%t %R" format, for more information see `PySeq Documentation`_.
+      Setting the full_path to None or an empty string is not accepted.
+
     .. _PySeq Documentation: http://packages.python.org/pyseq/
     """
     __auto_name__ = True
@@ -62,44 +62,44 @@ class Link(Entity):
         ForeignKey("Entities.id"),
         primary_key=True,
     )
-    
+
     original_filename = Column(String(256)) # this is a limit for most of
-                                            # the filesystems
-    
-    path = Column(
+    # the filesystems
+
+    full_path = Column(
         String,
-        doc="""The path of the url to the link.
-        
+        doc="""The full path of the url to the link.
+
         It can not be None or an empty string, it should be a string or
         unicode.
         """
     )
 
-    def __init__(self, path='', original_filename='', **kwargs):
+    def __init__(self, full_path='', original_filename='', **kwargs):
         super(Link, self).__init__(**kwargs)
-        self.path = path
+        self.path = full_path
         self.original_filename = original_filename
 
-    @validates('path')
-    def _validate_path(self, key, path):
-        """validates the given path value
+    @validates('full_path')
+    def _validate_full_path(self, key, full_path):
+        """validates the given full_path value
         """
-        if path is None:
-            raise TypeError("%s.path can not be None" %
+        if full_path is None:
+            raise TypeError("%s.full_path can not be None" %
                             self.__class__.__name__)
-        
-        if not isinstance(path, (str, unicode)):
-            raise TypeError("%s.path should be an instance of string or "
+
+        if not isinstance(full_path, (str, unicode)):
+            raise TypeError("%s.full_path should be an instance of string or "
                             "unicode not %s" %
                             (self.__class__.__name__,
-                             path.__class__.__name__))
-        
-        if path == "":
-            raise ValueError("%s.path can not be an empty string" %
+                             full_path.__class__.__name__))
+
+        if full_path == "":
+            raise ValueError("%s.full_path can not be an empty string" %
                              self.__class__.__name__)
-        
-        return self._format_path(path)
-    
+
+        return self._format_path(full_path)
+
     @validates('original_filename')
     def _validate_original_filename(self, key, original_filename):
         """validates the given original_filename value
@@ -107,28 +107,28 @@ class Link(Entity):
         filename_from_path = os.path.basename(self.path)
         if original_filename is None:
             original_filename = filename_from_path
-        
+
         if original_filename == '':
             original_filename = filename_from_path
-        
+
         if not isinstance(original_filename, (str, unicode)):
             raise TypeError('%s.original_filename should be an instance of '
-                            'str or unicode and not %s' % 
+                            'str or unicode and not %s' %
                             (self.__class__.__name__,
                              original_filename.__class__.__name__))
-        
+
         return original_filename
-    
+
     def _format_path(self, path):
         """formats the path to internal format, which is Linux forward slashes
         for path separation
         """
         return path.replace("\\", "/")
-    
+
     def __eq__(self, other):
         """the equality operator
         """
-        return super(Link, self).__eq__(other) and\
-               isinstance(other, Link) and\
-               self.path == other.path and\
-               self.type == other.type
+        return super(Link, self).__eq__(other) and \
+            isinstance(other, Link) and \
+            self.path == other.path and \
+            self.type == other.type
