@@ -272,13 +272,13 @@ class SequenceTester(unittest2.TestCase):
 
         link1 = Link(
             name="Artwork 1",
-            path="/mnt/M/JOBs/TEST_PROJECT",
+            full_path="/mnt/M/JOBs/TEST_PROJECT",
             filename="a.jpg",
             type=link_type_1
         )
         link2 = Link(
             name="Artwork 2",
-            path="/mnt/M/JOBs/TEST_PROJECT",
+            full_path="/mnt/M/JOBs/TEST_PROJECT",
             filename="b.jbg",
             type=link_type_1
         )
